--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,8 @@
-image:
-  file: .gitpod.dockerfile
+ports:
+- port: 3000
+  onOpen: open-preview
+tasks:
+- init: >
+    npm install
+  command: >
+    npm start
