--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "Rakesh Falke",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.8",
