--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.6.8",
     "nodemon": "^1.19.1"
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^8.5.1"
   }
 }
