--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Rakesh Falke",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
