--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.8",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "jsonwebtoken": "^8.5.1"
