--- a/package.json
+++ b/package.json
@@ -22,13 +22,17 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.6",
+    "db-migrate-mysql": "^2.1.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.5",
+    "mysql": "^2.18.1",
     "nodemon": "^1.19.1",
     "redis": "^2.8.0"
   },
   "devDependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql-migrations": "^1.0.6"
   }
 }
